# mcp-ssh-bridge

./: .commitlintrc.yml  .dockerignore  .editorconfig  .gitignore  .markdownlint.yaml  .markdownlintignore  .migration-baseline.json  .mutants.toml  .worktreeinclude  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  Makefile  OUTPUT_FORMATS.md  PLAN.md  README.md  RESEARCH-MISSING-FEATURES.md  SECURITY.md  clippy.toml  deny.toml  docker-compose.test.yml  docker-compose.yml  glama.json  plan.md  rustfmt.toml  server.json  typos.toml
.cargo/: audit.toml  config.toml  mutants.toml
.claude/rules/: protocol-adapters.md
.config/: nextest.toml
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deps.yml  docker.yml  fuzz.yml  labeler.yml  nightly-compat.yml  release.yml  security.yml
.specify/memory/: constitution.md
.well-known/mcp/: server-card.json
audit/2026-05-09/: dep-watch.md
benches/: README.md  protocol_bench.rs  registry_bench.rs  sanitizer_bench.rs  validator_bench.rs
config/: README.md  config.example.yaml
config/runbooks/: README.md  cert_renewal.yaml  disk_full.yaml  log_rotation.yaml  oom_recovery.yaml  service_restart.yaml
contrib/claude-skills/: README.md
crates/mcp-ssh-bridge-macros/: Cargo.toml
crates/mcp-ssh-bridge-macros/src/: lib.rs
docs/: THREAT_MODEL.md  audit-2026-05-09-findings.md
docs/research/: multi-protocol-support-plan.md
dxt/: README.md  manifest.json
examples/: README.md  basic_usage.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_active_directory_builder.rs  fuzz_ansible_command_builder.rs  fuzz_ansible_validation.rs  fuzz_audit_serialize.rs  fuzz_certificate_command_builder.rs  fuzz_char_boundary.rs  fuzz_command_validator.rs  fuzz_completions_params.rs  fuzz_cron_command_builder.rs  fuzz_db_command_builder.rs  fuzz_db_query_validation.rs  fuzz_db_type_parse.rs  fuzz_docker_command_builder.rs  fuzz_elicitation_params.rs  fuzz_firewall_command_builder.rs  fuzz_git_command_builder.rs  fuzz_helm_command_builder.rs  fuzz_host_config.rs  fuzz_hyperv_builder.rs  fuzz_iis_builder.rs  fuzz_initialize_params.rs  fuzz_jsonrpc_parse.rs  fuzz_k8s_command_builder.rs  fuzz_k8s_validation.rs  fuzz_logging_params.rs  fuzz_network_command_builder.rs  fuzz_nginx_command_builder.rs  fuzz_output_cache.rs  fuzz_package_command_builder.rs  fuzz_parse_metrics.rs  fuzz_process_command_builder.rs  fuzz_prompts_get_params.rs  fuzz_rate_limiter.rs  fuzz_redis_command_builder.rs  fuzz_regex_redos.rs  fuzz_resource_uri.rs  fuzz_sampling_params.rs  fuzz_sanitizer.rs  fuzz_scheduled_task_builder.rs  fuzz_security_config.rs  (+17 more)
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
scripts/: extract_tool_metadata.py  migrate_handler.py  tool_metadata.json  validate_baseline.py
specs/001-winrm-psrp-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: README.md  error.rs  lib.rs  main.rs  metrics.rs  path_utils.rs  telemetry.rs
src/cli/: README.md  mod.rs  runner.rs
src/cloud_exec/: azure.rs  gcp.rs  mod.rs
src/config/: README.md  loader.rs  mod.rs  ssh_config.rs  types.rs  watcher.rs
src/daemon/: connection.rs  mod.rs  pidfile.rs
src/domain/: README.md  data_reduction.rs  diff.rs  history.rs  jq_filter.rs  mod.rs  output_cache.rs  output_kind.rs  output_truncator.rs  runbook.rs  task_store.rs  yaml.rs  yq_filter.rs
src/grpc_exec/: mod.rs
src/k8s_exec/: mod.rs  pool.rs
src/mcp/: README.md  client_requester.rs  completion_provider.rs  elicitation.rs  history.rs  instructions.rs  logger.rs  meta_tools.rs  mod.rs  pending_requests.rs  progress.rs  prompt_registry.rs  protocol.rs  registry.rs  resource_registry.rs  sampling.rs  server.rs  session_capabilities.rs  session_context.rs  standard_tool.rs
src/mcp/apps/: mod.rs
src/mqtt_exec/: mod.rs
src/nats_exec/: mod.rs
src/netconf/: mod.rs
src/ports/: README.md  completions.rs  connector.rs  executor.rs  executor_router.rs  mod.rs  prompts.rs  protocol.rs  resources.rs  ssh.rs  tools.rs
src/psrp/: mod.rs  pool.rs
src/security/: README.md  audit.rs  entropy.rs  mod.rs  rate_limiter.rs  rbac.rs  recording.rs  sanitizer.rs  validator.rs
src/serial_port/: mod.rs
src/snmp_client/: mod.rs
src/ssh/: README.md  client.rs  connector.rs  known_hosts.rs  mod.rs  pool.rs  retry.rs  session.rs  sftp.rs
src/ssm/: mod.rs
src/telnet/: mod.rs
src/winrm/: mod.rs  pool.rs
src/zmq_exec/: mod.rs
tests/: README.md  annotation_audit.rs  architecture_rules.rs  audit_2026_05_09_proptests.rs  builder_syntax.rs  config_validation.rs  cross_session_cancel.rs  daemon_integration.rs  deny_unknown_fields.rs  destructive_default.rs  e2e_docker.rs  e2e_mock.rs  e2e_raspberry.rs  error_propagation.rs  http_middleware.rs  integration.rs  mcp_conformance.rs  mcp_protocol.rs  multisession_isolation.rs  network_simulation.rs  oauth_keys_loaded.rs  output_cache_integration.rs  per_session_log_level.rs  per_session_state.rs  proptest_commands.rs  replay_tests.rs  saphyr_budget.rs  security_audit.rs  security_audit_redaction.rs  sftp_integration.rs  sftp_mock.rs  snapshot_commands.rs  ssh_client_mock.rs  ssh_config_discovery_default.rs  ssh_integration.rs  ssh_mock_server.rs  ssh_preferred_algos.rs  ssh_test_config.example.yaml  stdio_transport_e2e.rs  stress_tests.rs  (+2 more)
tests/fixtures/: basic_commands.json  docker_workflow.json  session_workflow.json
tests/snapshots/: snapshot_commands__cd_cmd.snap  snapshot_commands__cd_posix.snap  snapshot_commands__cd_powershell.snap  snapshot_commands__cmd_escape.snap  snapshot_commands__posix_escape.snap  snapshot_commands__powershell_escape.snap  snapshot_commands__snapshot_docker_auto_detect.snap  snapshot_commands__snapshot_docker_exec.snap  snapshot_commands__snapshot_docker_exec_with_env.snap  snapshot_commands__snapshot_docker_images.snap  snapshot_commands__snapshot_docker_inspect.snap  snapshot_commands__snapshot_docker_logs_with_options.snap  (+15 more)
(+486 files in other folders)
