[package]
name = "mcp-ssh-bridge"
version = "1.8.0"
edition = "2024"
rust-version = "1.94"
description = "MCP server that bridges Claude Code to air-gapped environments via SSH"
authors = ["muchini"]
license = "MIT"
repository = "https://github.com/muchini/mcp-ssh-bridge"
keywords = ["mcp", "ssh", "model-context-protocol", "devops", "automation"]
categories = ["command-line-utilities", "network-programming"]
homepage = "https://github.com/muchiny/mcp-ssh-bridge"
readme = "README.md"
documentation = "https://docs.rs/mcp-ssh-bridge"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-machete]
ignored = ["hyper-util", "prost", "quick-xml", "tower"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:clap_complete"]
http = ["dep:axum", "dep:tower", "dep:tower-http", "dep:hyper-util", "dep:tokio-stream"]
mimalloc = ["dep:mimalloc"]

# Protocol adapters (Tier 1)
winrm = ["dep:reqwest", "dep:quick-xml"]
telnet = ["dep:mini-telnet"]
netconf = ["dep:netconf-rs"]
grpc = ["dep:tonic", "dep:prost"]

# Protocol adapters (Tier 2)
k8s-exec = ["dep:kube", "dep:k8s-openapi"]
serial = ["dep:tokio-serial"]
snmp = ["dep:snmp"]

# Protocol adapters (Tier 3 — Cloud-only, non air-gapped)
ssm = ["dep:aws-sdk-ssm", "dep:aws-config"]
azure = ["dep:reqwest"]
gcp = []
cloud = ["ssm", "azure", "gcp"]

# Protocol adapters (Tier 4 — Messaging, requires remote agent)
zeromq = ["dep:zeromq"]
nats = ["dep:async-nats"]
mqtt = ["dep:rumqttc"]
messaging = ["zeromq", "nats", "mqtt"]

# Data reduction (jq filtering for tool output)
jq = ["dep:jaq-core", "dep:jaq-std", "dep:jaq-json"]

# Bundles
full = ["cli", "mimalloc", "http", "jq"]
air-gapped = ["winrm", "telnet", "netconf"]
all-protocols = ["winrm", "telnet", "netconf", "grpc", "k8s-exec", "serial", "snmp", "ssm", "azure", "gcp", "zeromq", "nats", "mqtt"]

[dependencies]
# Async runtime (explicit features instead of "full" for smaller binary)
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "net", "process", "time", "fs", "io-std", "macros", "sync"] }

# SSH
russh = "0.58"
russh-sftp = "2.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-saphyr = "=0.0.21"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI (optional, enabled by default)
clap = { version = "4.5", features = ["derive"], optional = true }
clap_complete = { version = "4.5", optional = true }

# Tokio utilities (CancellationToken for ssh_exec_multi)
tokio-util = "0.7"

# Utils
regex = "1"
aho-corasick = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
dirs = "6"
shellexpand = "3"
tokio-socks = "0.5"
async-trait = "0.1"
sha2 = "0.10"
const-hex = "1"
zeroize = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

# File watching for hot-reload
notify = "8.2"

# Data parallelism for multi-host metrics parsing
rayon = "1"

# HTTP transport (optional, for Streamable HTTP + OAuth)
axum = { version = "0.8", features = ["json"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "limit"], optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }
tokio-stream = { version = "0.1", optional = true }

# Alternative allocator (optional, recommended for musl builds)
mimalloc = { version = "0.1", default-features = false, optional = true }

# WinRM adapter (optional) — SOAP/WS-Man over HTTPS
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"], optional = true }
quick-xml = { version = "0.39", features = ["serialize"], optional = true }

# Telnet adapter (optional) — legacy network equipment
mini-telnet = { version = "0.1", optional = true }

# NETCONF adapter (optional) — RFC 6241 over SSH
netconf-rs = { version = "0.2", optional = true }

# gRPC adapter (optional) — cloud-native remote execution
tonic = { version = "0.14", optional = true }
prost = { version = "0.14", optional = true }

# Kubernetes Exec adapter (optional) — direct pod exec via K8s API
kube = { version = "3.1", default-features = false, features = ["client", "rustls-tls", "ws"], optional = true }
k8s-openapi = { version = "0.27", features = ["v1_32"], optional = true }

# Serial adapter (optional) — serial port communication (PLCs, embedded, console)
tokio-serial = { version = "5.4", optional = true }

# SNMP adapter (optional) — SNMP v1/v2c network monitoring
snmp = { version = "0.2", optional = true }

# AWS SSM adapter (optional) — cloud command execution via Systems Manager
aws-sdk-ssm = { version = "1", optional = true }
aws-config = { version = "1", features = ["behavior-version-latest"], optional = true }

# ZeroMQ adapter (optional) — fleet-scale messaging (SaltStack model)
zeromq = { version = "0.5", optional = true }

# NATS adapter (optional) — event-driven messaging
async-nats = { version = "0.46", optional = true }

# MQTT adapter (optional) — IoT/Edge messaging
rumqttc = { version = "0.25", optional = true }

# jq filtering for tool output reduction (optional)
jaq-core = { version = "3", optional = true }
jaq-std = { version = "3", optional = true }
jaq-json = { version = "2", features = ["serde"], optional = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }
filetime = "0.2"
tracing-test = "0.2"
proptest = "1"
insta = { version = "1", features = ["json", "yaml"] }

[[bench]]
name = "validator_bench"
harness = false

[[bench]]
name = "sanitizer_bench"
harness = false

[[bench]]
name = "registry_bench"
harness = false

[[bench]]
name = "protocol_bench"
harness = false

[[bin]]
name = "mcp-ssh-bridge"
path = "src/main.rs"
required-features = ["cli"]

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
# Faster dev builds
opt-level = 0
debug = true

[profile.mutants]
# Optimized for mutation testing
inherits = "test"
debug = "none"

[lints.rust]
unsafe_code = "forbid"
# 330 items need docs — enable progressively per-module
missing_docs = "allow"

[lints.clippy]
# Correctness
correctness = { level = "deny", priority = -1 }

# Suspicious code
suspicious = { level = "warn", priority = -1 }

# Style
style = { level = "warn", priority = -1 }

# Complexity
complexity = { level = "warn", priority = -1 }

# Performance
perf = { level = "warn", priority = -1 }

# Pedantic (more strict)
pedantic = { level = "warn", priority = -1 }

# Specific overrides
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
