[package]
name = "mcp-ssh-bridge-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
serde_json = "1"
serde-saphyr = "0.0.18"
tokio = { version = "1", features = ["rt", "macros"] }

[dependencies.mcp-ssh-bridge]
path = ".."

[[bin]]
name = "fuzz_shell_escape"
path = "fuzz_targets/fuzz_shell_escape.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_validate_path"
path = "fuzz_targets/fuzz_validate_path.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_sanitizer"
path = "fuzz_targets/fuzz_sanitizer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_command_validator"
path = "fuzz_targets/fuzz_command_validator.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_parse_metrics"
path = "fuzz_targets/fuzz_parse_metrics.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_truncate_output"
path = "fuzz_targets/fuzz_truncate_output.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_jsonrpc_parse"
path = "fuzz_targets/fuzz_jsonrpc_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_yaml_config"
path = "fuzz_targets/fuzz_yaml_config.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_regex_redos"
path = "fuzz_targets/fuzz_regex_redos.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_transfer_mode"
path = "fuzz_targets/fuzz_transfer_mode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_tool_params"
path = "fuzz_targets/fuzz_tool_params.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_host_config"
path = "fuzz_targets/fuzz_host_config.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rate_limiter"
path = "fuzz_targets/fuzz_rate_limiter.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_char_boundary"
path = "fuzz_targets/fuzz_char_boundary.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_audit_serialize"
path = "fuzz_targets/fuzz_audit_serialize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_security_config"
path = "fuzz_targets/fuzz_security_config.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_db_command_builder"
path = "fuzz_targets/fuzz_db_command_builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_db_query_validation"
path = "fuzz_targets/fuzz_db_query_validation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_db_type_parse"
path = "fuzz_targets/fuzz_db_type_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_ssh_config_parser"
path = "fuzz_targets/fuzz_ssh_config_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_tunnel_manager"
path = "fuzz_targets/fuzz_tunnel_manager.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_k8s_command_builder"
path = "fuzz_targets/fuzz_k8s_command_builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_k8s_validation"
path = "fuzz_targets/fuzz_k8s_validation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_helm_command_builder"
path = "fuzz_targets/fuzz_helm_command_builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_ansible_command_builder"
path = "fuzz_targets/fuzz_ansible_command_builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_ansible_validation"
path = "fuzz_targets/fuzz_ansible_validation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_task_params"
path = "fuzz_targets/fuzz_task_params.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_initialize_params"
path = "fuzz_targets/fuzz_initialize_params.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_prompts_get_params"
path = "fuzz_targets/fuzz_prompts_get_params.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_resource_uri"
path = "fuzz_targets/fuzz_resource_uri.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_task_store"
path = "fuzz_targets/fuzz_task_store.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_output_cache"
path = "fuzz_targets/fuzz_output_cache.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_docker_command_builder"
path = "fuzz_targets/fuzz_docker_command_builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_terraform_command_builder"
path = "fuzz_targets/fuzz_terraform_command_builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_vault_command_builder"
path = "fuzz_targets/fuzz_vault_command_builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_redis_command_builder"
path = "fuzz_targets/fuzz_redis_command_builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_nginx_command_builder"
path = "fuzz_targets/fuzz_nginx_command_builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_firewall_command_builder"
path = "fuzz_targets/fuzz_firewall_command_builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_cron_command_builder"
path = "fuzz_targets/fuzz_cron_command_builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_certificate_command_builder"
path = "fuzz_targets/fuzz_certificate_command_builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_git_command_builder"
path = "fuzz_targets/fuzz_git_command_builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_systemd_command_builder"
path = "fuzz_targets/fuzz_systemd_command_builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_network_command_builder"
path = "fuzz_targets/fuzz_network_command_builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_process_command_builder"
path = "fuzz_targets/fuzz_process_command_builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_package_command_builder"
path = "fuzz_targets/fuzz_package_command_builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_windows_service_builder"
path = "fuzz_targets/fuzz_windows_service_builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_windows_event_builder"
path = "fuzz_targets/fuzz_windows_event_builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_active_directory_builder"
path = "fuzz_targets/fuzz_active_directory_builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_scheduled_task_builder"
path = "fuzz_targets/fuzz_scheduled_task_builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_windows_firewall_builder"
path = "fuzz_targets/fuzz_windows_firewall_builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_iis_builder"
path = "fuzz_targets/fuzz_iis_builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_hyperv_builder"
path = "fuzz_targets/fuzz_hyperv_builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_windows_registry_builder"
path = "fuzz_targets/fuzz_windows_registry_builder.rs"
test = false
doc = false
bench = false
