[package]
name = "mcp-ssh-bridge-macros"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "Proc-macro helpers for the mcp-ssh-bridge crate (tool auto-registration)"
license = "MIT"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
